# fast_api_tutorial

./: README.md  main.py  models.py  pyproject.toml
templates/: home.html  layout.html
