[tool.poetry]
name = "fast_api_tutorial"
version = "0.1.0"
description = ""
authors = ["Bartosz Tyrala <automationdream@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
fastapi = "^0.61.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
